# tux-io-s3-lib

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: check.yml  doc.yml
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/commands/: list.rs  mod.rs  service.rs
src/: client.rs  command.rs  lib.rs
src/client/: bucket.rs  builder.rs  errors.rs  http_client.rs  inner.rs  settings.rs
src/command/: body.rs  delete.rs  get.rs  head.rs  list.rs  put.rs
src/command/body/: stream.rs
src/command/delete/: tagging.rs
src/command/get/: tagging.rs
src/command/head/: bucket.rs
src/command/list/: buckets.rs  extensions.rs
src/command/put/: actions.rs  multipart.rs  tagging.rs
src/credentials/: error.rs  header.rs  mod.rs  provider.rs  signing.rs
src/credentials/provider/: assume_role.rs
src/test/: mod.rs
src/utils/: header.rs  mod.rs  url.rs
src/utils/header/: s3_headers.rs
src/utils/stream/: min_sized_stream.rs  mod.rs
types/: Cargo.toml
types/src/: error.rs  headers.rs  lib.rs  owner.rs  tag.rs
types/src/credentials/: assume_role_with_web_identity.rs  mod.rs
types/src/list/: buckets.rs  mod.rs  object.rs  prefix.rs
types/src/list/v1/: extractor.rs  mod.rs
types/src/list/v2/: extractor.rs  mod.rs
types/src/multi_part/: mod.rs
types/src/region/: mod.rs  official.rs
types/src/signature/: mod.rs
types/src/tag/: extractor.rs  header.rs  tag_type.rs  validation.rs
types/src/utils/: mod.rs
